display the product's ingredients on the main page